# gossip

./: .coverage  .gitignore  CITATION.cff  EXPANDED_CIRCULANT_FINDINGS.md  FAILURE_ANALYSIS.md  IMPROVEMENTS.md  README.md  README_TESTS.md  TEST_SUMMARY.md  analyze_circulants.py  benchmark.output  benchmark.py  coverage.xml  debug_circulant_failure.py  pyproject.toml  requirements.txt  run_all_tests.py  run_original_tests.py  systematic_circulant_test.py  test_gossip_hard_instances.py  test_performance.py  test_performance_summary.py  validate.py
benchmarks/: cages.py  circulant.py  common.py  er_complexity.py  families.py  legacy_tests.py  other_families.py  products.py  transforms.py  trees.py  zeta.py
old_files/: README_TESTS.md  gossip_cli.py  run_complete_baseline.py  run_full_evaluation.py  test_baseline_expansion.py  test_expanded_circulant.py  test_gossip_comprehensive.py  test_regular_graphs.py
src/gossip/: __init__.py  algorithm.py  cli.py  utils.py
src/gossip_graph.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  conftest.py  test_algorithm.py  test_hard_instances.py  test_integration.py  test_performance.py  test_showcase.py
